# LD32

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
CMake/: FindAngelscript.cmake  FindAngelscriptJIT.cmake
Scripts/: clock.as  main.as  player.as
Scripts/Weapons/: main.as
Sources/: CMakeLists.txt  GameClass.cpp  GameClass.hpp
Sources/AS_SFML/: CMakeLists.txt  Color.cpp  Common.cpp  Common.hpp  Internal.hpp  Joystick.cpp  Keyboard.cpp  Mouse.cpp  Music.cpp  RenderTarget.cpp  Shader.cpp  Shape.cpp  Sound.cpp  Sprite.cpp  Text.cpp  Texture.cpp  View.cpp
Sources/Entry/: CMakeLists.txt  FallacyTime.cpp  Menu.cpp  Menu.hpp  Resources.cpp  Resources.hpp  ScriptWeapon.cpp  ScriptWeapon.hpp  main.cpp
Sources/Entry/Gameplay/: Character.cpp  Character.hpp  Enemy.cpp  Enemy.hpp  FallacyTime.cpp  FallacyTime.hpp  GameState.cpp  GameState.hpp  NameGen.cpp  NameGen.hpp  Weapon.cpp  Weapon.hpp
Sources/Game/: AspectHolder.cpp  AspectHolder.hpp  ScriptExtensions.cpp  ScriptExtensions.hpp  ScriptManager.cpp  ScriptManager.hpp  ScriptObject.cpp  ScriptObject.hpp  Statistics.cpp  Statistics.hpp
Sources/Math/: Common.cpp  Common.hpp  Common.inl  Eases.hpp  Eases.inl  Rect.cpp  Rect.hpp  Spinor.cpp  Spinor.hpp  Vec2.cpp  Vec2.hpp
Sources/Util/: DefaultFont.cpp  DefaultFont.hpp  FileWatcher.cpp  FileWatcher.hpp  Path.cpp  Path.hpp  Time.cpp  Time.hpp
Sources/Warmup/: CMakeLists.txt  main.cpp
