set(HEADERS

)
set(SOURCES

)

add_executable(LD32_Warmup main.cpp ${HEADERS} ${SOURCES})
target_link_libraries(LD32_Warmup
	LD32_Core
	AS_SFML
	Kunlaboro

	${Angelscript_LIBRARIES}
	${Fontconfig_LIBRARIES}
	${SFML_LIBRARIES}
)

IF(WIN32)
	SET_TARGET_PROPERTIES(LD32_Warmup PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE /ignore:4099")
	SET_TARGET_PROPERTIES(LD32_Warmup PROPERTIES COMPILE_DEFINITIONS_DEBUG "_CONSOLE")
	SET_TARGET_PROPERTIES(LD32_Warmup PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:CONSOLE /ignore:4099")
	SET_TARGET_PROPERTIES(LD32_Warmup PROPERTIES COMPILE_DEFINITIONS_RELWITHDEBINFO "_CONSOLE")
	SET_TARGET_PROPERTIES(LD32_Warmup PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS")
	SET_TARGET_PROPERTIES(LD32_Warmup PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:WINDOWS")
ENDIF(WIN32)
